--- a/Programacion/Boletin1/bin/.gitignore
+++ b/Programacion/Boletin1/bin/.gitignore
@@ -23,3 +23,8 @@
 /Ejercicio8.class
 /Ejercicio9.class
 /dias.class
+/Ejercicio31.class
+/Ejercicio27.class
+/Ejercicio28.class
+/Ejercicio29.class
+/Ejercicio30.class
