--- a/Programacion/Unidad4v2/bin/.gitignore
+++ b/Programacion/Unidad4v2/bin/.gitignore
@@ -5,3 +5,7 @@
 /Ejercicio49.class
 /Ejercicio50.class
 /Ejercicio51.class
+/QueLadoDeLaCalle.class
+/LaFiestaAburrida117.class
+/LaFiestaAburrida117b.class
+/SanFermines149.class
