--- a/Entorno Desarrollo/Projects/CBingo/CBingo/CBingo.csproj
+++ b/Entorno Desarrollo/Projects/CBingo/CBingo/CBingo.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{90A686E3-B772-4AA3-A826-667BE807DD86}</ProjectGuid>
+    <ProjectGuid>{388EBC08-3FE5-479D-92CD-B0FF24D6C0D7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Bingo</RootNamespace>
-    <AssemblyName>Bingo</AssemblyName>
+    <RootNamespace>CBingo</RootNamespace>
+    <AssemblyName>CBingo</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -63,11 +63,9 @@
     <Compile Include="MainWindow.cs" />
     <Compile Include="gtk-gui\MainWindow.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Panel.cs" />
-    <Compile Include="Bolas.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
+    <Compile Include="Bombo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
