--- a/Entorno Desarrollo/Projects/CBingo/CBingo/CBingo.csproj
+++ b/Entorno Desarrollo/Projects/CBingo/CBingo/CBingo.csproj
@@ -63,9 +63,12 @@
     <Compile Include="MainWindow.cs" />
     <Compile Include="gtk-gui\MainWindow.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Panel.cs" />
     <Compile Include="Bombo.cs" />
+    <Compile Include="Boleto.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
